fix spacing on about me page.

--- a/src/pages/AboutMe/AboutMe.module.css
+++ b/src/pages/AboutMe/AboutMe.module.css
@@ -27,6 +27,11 @@
   margin:0;
 }
 
+.info p {
+  margin: 0;
+  padding: 3px;
+}
+
 .info .p1 {
   border-right: 3px solid white;
   font-size: 28px;
